# MediaArchiverSuite

./: .gitmodules  CMakeLists.txt  DataServer.py  FileCopierLinux.cpp  FileCopierLinux.hpp  FileSystemWatcher.hpp  FileSystemWatcherLinux.cpp  FileSystemWatcherLinux.hpp  FileUtils.hpp  IDatabase.hpp  IFileCopier.hpp  IFileSystemChangeListener.hpp  IFileSystemWatcher.hpp  IMediaArchiverServer.hpp  MediaArchiver.cfg  MediaArchiverClient.cpp  MediaArchiverClient.hpp  MediaArchiverClientConfig.hpp  MediaArchiverClientMain.cpp  MediaArchiverConfig.hpp  MediaArchiverDaemon.cpp  MediaArchiverDaemon.hpp  MediaArchiverDaemonConfig.hpp  README.md  RpcFunctions.hpp  SQLite.cpp  SQLite.hpp  ServerFactory.cpp  ServerIf.hpp  _clang-format
cmake/: gcc-mips-mt7621.cmake
sqlite/: CMakeLists.txt
tests/: CMakeLists.txt  ServerMock.hpp  test_client.cpp  test_client_offline.cpp  test_daemon.cpp  test_hello.cpp  test_inotify.cpp  test_sqlite.cpp
